--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/EP.jpg" alt="" /></div><div class="content">
 								<h2>EXPENSEPLUS<br /></h2>
-								<p style="text-align: center;">I’m an ExpensePlus verified bookkeeper and consultant. No matter how big or small your charity may be, ExpensePlus’ easy-to-use, cloud-based, fund accounting software will save you time and money. All my services require your organisation to either be using ExpensePlus already, or be willing to migrate to that system (which I can help you with). 
+								<p style="text-align: center;">I’m an ExpensePlus verified bookkeeper and consultant. No matter how big or small your charity may be, <a href="https://expenseplus.co.uk/">ExpensePlus'</a> easy-to-use, cloud-based, fund accounting software will save you time and money. All my services require your organisation to either be using ExpensePlus already, or be willing to migrate to that system (which I can help you with). 
 									I am not employed by ExpensePlus, but have extensive user experience with their product. I enjoy a great working relationship with their team and strongly support the excellent work they do in helping churches and charities manage their finances.</p>
 							</div>
 						</section>
