--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 </script>
 		<title>PD Marfleet Accounting</title>
 		<meta charset="utf-8" />
+		<link rel="icon" type="image/x-icon" href="/images/A2-PDM Fav.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
