--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<section id="banner">
 						<div class="inner">
 						<h2>
-							<img src="images/PDM-Logo-white.png" style="padding-top: 8px" width="50%">
+							<img src="images/PDM-Logo-colour-whitetxt.png" style="padding-top: 8px" width="50%">
 								
 						</h2>
 						<p>OUTSOURCED BOOKKEEPING, TRAINING AND CONSULTANCY FOR CHARITIES AND NON-PROFITS</p>
