--- a/Contact.html
+++ b/Contact.html
@@ -52,17 +52,16 @@
 
 				<!-- Main -->
 					<article id="main">
-						<header><a href="mailto:pete@pdmarfleet.co.uk">
+						<header>
 							<img src="images/headshot-1.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="10%">
 							<p>Get in touch</p>
-					
 						</header>
 						</article>
 				<!-- One -->
 				<section id="one" class="wrapper style1 special">
 					<div class="inner">
 						<header class="major">
-							<p class="icon solid fa-envelope"><span class="label"></span></a><a href="mailto: pete@pdmarfleet.co.uk">  pete@pdmarfleet.co.uk</a></p>
+							<p class="icon solid fa-envelope"><span class="label"></span></a><a href="mailto: pete@pdmarfleet.co.uk" style="text-decoration: none;">  pete@pdmarfleet.co.uk</a></p>
 							<p class="icon solid fa-phone"><span class="label"></span></a><a href="tel: 07398906234">  07398906234</a></p>
 							<a href="https://www.linkedin.com/in/pdmarfleet/" class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/pdmarfleet/"> pdmarfleet</a></p>
 							
