--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="2356d7d5-45ee-4c0a-8fa9-7bb0b0bf112b" data-blockingmode="auto" type="text/javascript" style="color: red;"></script>
+		<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="2356d7d5-45ee-4c0a-8fa9-7bb0b0bf112b" data-blockingmode="auto" type="text/javascript"></script>
 		<!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-BHM0SHWB0T"></script>
 <script>
