--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -54,10 +54,11 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<img src="images/EP.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="30%">
-							<p>Bookkeeping Package</p>
+							<img src="images/EP.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="60%">
+							<p>Outsourced Bookkeeping Package</p>
 							<p style="text-transform: lowercase;">from £545 per month </p>
-		
+							<a href="#one" class="more scrolly">Learn More</a>
+
 						</header>
 						</article>
 				<!-- one -->
