--- a/Training-Support.html
+++ b/Training-Support.html
@@ -54,30 +54,31 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<img src="images/training.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="200px">
+							<img src="images/training2.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="200px">
 							<p>Training & Support</p>
 							<p style="text-transform: lowercase;">from £65</p>
 						</header>
-				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="images/training2.jpg" style="max-width:50%; display: flex;margin-left: auto; margin-right: auto; " /></div>
-							<div class="content">
+			
+				<!-- one -->
+				<section id="one" class="wrapper style1 special">
+					<div class="inner">
+						<header class="major">
+							<h2 style="color: #228ea6;">What's included?</h2>
 								<p>ExpensePlus provides excellent free training and support through their website, which is sufficient for many users. However, sometimes additional support from me is helpful if:</p>
 								<li>You would benefit from bespoke training.</li>
 								<li>Managing charity accounts is new to you and you would like additional help getting started.</li>
 								<li>You need help sorting out your finances because they are complicated and messy.</li>
 								<li>You want to migrate to ExpensePlus as quickly and easily as possible without having to figure it all out yourself.</li>
 								<li>Or for any other reason you like!</li>			
-								
-							</div>
-						</section>
+							</header>		
+						</div>
+					</section>	
 					</article>
 					<!-- packages -->		
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Traing & Support Packages</h2>
+								<h2 style="color: #228ea6;">What's included?</h2>
 						
 							</header>
 							<ul class="features">
