--- a/Training-Support.html
+++ b/Training-Support.html
@@ -63,7 +63,7 @@
 				<section id="one" class="wrapper style1 special">
 					<div class="inner">
 						<header class="major">
-							<h2 style="color: #228ea6;">What's included?</h2>
+							<h2 style="color: #228ea6;">Training & Support</h2>
 								<p>ExpensePlus provides excellent free training and support through their website, which is sufficient for many users. However, sometimes additional support from me is helpful if:</p>
 								<li>You would benefit from bespoke training.</li>
 								<li>Managing charity accounts is new to you and you would like additional help getting started.</li>
@@ -77,10 +77,6 @@
 					<!-- packages -->		
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
-							<header class="major">
-								<h2 style="color: #228ea6;">What's included?</h2>
-						
-							</header>
 							<ul class="features">
 								<li>
 									<header class="package">
