--- a/Training-Support.html
+++ b/Training-Support.html
@@ -77,7 +77,9 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<ul class="features">
+								<header class="minor">
 								<h2 style="color: #228ea6;">Training & Support Options</h2>
+							</header>
 								<li>
 									<header class="package">
 									<h3>Custom Online Training Package</h3>
