--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -66,7 +66,7 @@
 					<div class="inner">
 						<header class="major">
 							<h2 style="color: #228ea6;">What's included?</h2>
-								<p>We will start with a free, no-obligation, 30-minute consultation via Zoom. This will enable me to learn more about you, your organisation, and your current ExpensePlus account setup in greater depth. As each organisation's bookkeeping is unique, the fees I charge may vary upwards from a base price of £545 per month. However, if I assess your accounts to be very simple or if you are a very small organisation, I may be able to offer a lower price to accommodate your needs. At the end of this session, I will confirm the package price for you.</p>
+								<p>If your thinking about outsourcing your bookkeeping, then we'll start with a free, no-obligation, 30-minute consultation via Zoom. This will enable me to learn more about you, your organisation, and your current ExpensePlus account setup in greater depth. As each organisation's bookkeeping is unique, the fees I charge may vary upwards from a base price of £545 per month. However, if I assess your accounts to be very simple or if you are a very small organisation, I may be able to offer a lower price to accommodate your needs. At the end of this session, I will confirm the package price for you.</p>
 								
 						</header>		
 					</div>
@@ -110,14 +110,14 @@
 											</div>
 										</div>
 									</div>
-									<a class="button" href="#popup2">If you don’t use ExpensePlus?</a>
+									<a class="button" href="#popup2">We don’t use ExpensePlus?</a>
 																
 									<div id="popup2" class="overlay">
 										<div class="popup">
 											<h2>What if we don’t use ExpensePlus, can you do our bookkeeping still?</h2>
 											<a class="close" href="#three">&times;</a>
 											<div class="content">
-									<p>My services are only available to charities and churches using ExpensePlus. However, if your organisation is not yet using ExpensePlus, I can assist in migrating your accounting system to the platform before taking on your bookkeeping for you.</p>
+									<p>My services are only available to charities and churches using ExpensePlus. However, if your organisation is not yet using ExpensePlus, <a href="Training-Support.html">I can assist in migrating your accounting system</a> to the platform before taking on your bookkeeping for you.</p>
 									<div class="center-button" >
 										<a href="contact.html" class="button fit primary" style="margin-bottom: 2em;">Enquire</a>
 										</div>
