--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<section id="banner">
 						<div class="inner">
 						<h2>
-							<img src="images/PDM-Logo-colour-whitetxt.png" style="padding-top: 8px">
+							<img src="images/PDM-Logo-colour-whitetxt.png" style="padding-top: 8px" width="auto">
 								
 						</h2>
 						<p>OUTSOURCED BOOKKEEPING, TRAINING AND CONSULTANCY FOR CHARITIES AND NON-PROFITS</p>
