--- a/Contact.html
+++ b/Contact.html
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="image-link"><img src="images/PD MARFLEET_Logo header header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
+						<a href="index.html" class="image-link"><img src="images/PD MARFLEET_Logo header header.png" style="margin-top: 0.1em;"></a>
 						<nav id="nav">
 							<ul>
 								<li class="special">
