--- a/Contact.html
+++ b/Contact.html
@@ -54,7 +54,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<img src="images/headshot-1.jpg" style="border-radius: 1em; margin-bottom: 20px;">
+							<img src="images/headshot-1.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="200px">
 							<p>Get in touch</p>
 						</header>
 						</article>
