--- a/Training-Support.html
+++ b/Training-Support.html
@@ -64,7 +64,7 @@
 					<div class="inner">
 						<header class="major">
 								<p>ExpensePlus provides excellent free training and support through their website, which is sufficient for many users. However, sometimes additional support from me is helpful if:</p>
-							<div sytle="max-width:60%">
+							<div sytle="max-width:60%;">
 								<li>You would benefit from bespoke training.</li>
 								<li>Managing charity accounts is new to you and you would like additional help getting started.</li>
 								<li>You need help sorting out your finances because they are complicated and messy.</li>
