--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </script>
 		<title>PD Marfleet Accounting</title>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/x-icon" href="/images/A2-PDM Fav.png">
+		<link rel="icon" type="image/x-icon" href="/images/PD-Marfleet-Accounting and-Bookkeeping- Fav.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -52,7 +52,7 @@
 					<section id="banner">
 						<div class="inner">
 						<h2>
-							<img src="images/PDM-Logo-colour-whitetxt.png" style="padding-top: 8px" width="100%">
+							<img src="images/PD-Marfleet-Charity-Accounting%20and-Bookkeeping-logo%20on%20white.png" style="padding-top: 8px" width="100%">
 								
 						</h2>
 						<p>OUTSOURCED BOOKKEEPING, TRAINING AND CONSULTANCY FOR CHARITIES AND NON-PROFITS</p>
@@ -67,7 +67,7 @@
 							<header class="major">
 								<h2>WELCOME<br /></h2>
 								<p>I’m Pete Marfleet. I help charities streamline their finances.</p>
-								<img src="images/headshot-1.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="200px">
+								<img src="images/PD-Marfleet-Charity-Accounting%20and-Bookkeeping.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="200px">
 								<p> My business provides cost-effective, outsourced bookkeeping services to charities, churches and non-profits, along with advice, support and training packages for organisations seeking to upgrade their accounting processes.</p>
 						
 						</header>
@@ -78,7 +78,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/Bookkeeping-package.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/ExpensePlus-Bookkeeping-package.jpg" alt="" /></div><div class="content">
 								<h2>OUTSOURCED BOOKKEEPING<br /></h2>
 								<p style="text-align: center;">Save your organisation time and money by outsourcing your bookkeeping to me via the ExpensePlus cloud accounting software.</p>
 								<div class="center-button">
@@ -87,7 +87,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/training.png" alt="" /></div><div class="content">
+							<div class="image"><img src="images/ExpensePlus-training-support.png" alt="" /></div><div class="content">
 								<h2>SUPPORT AND TRAINING<br /></h2>
 								<p style="text-align: center;">Get bespoke setup & support for your team when moving to ExpensePlus cloud accounting system.</p>
 								<div class="center-button">
@@ -102,7 +102,7 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/EP.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/ExpensePlus-cloud-accounting-software-for-charities.jpg" alt="" /></div><div class="content">
 								<h2>EXPENSEPLUS<br /></h2>
 								<p style="text-align: center;">I’m an ExpensePlus verified bookkeeper and consultant. No matter how big or small your charity may be, <a href="https://expenseplus.co.uk/">ExpensePlus'</a> easy-to-use, cloud-based, fund accounting software will save you time and money. All my services require your organisation to either be using ExpensePlus already, or be willing to migrate to that system (which I can help you with). 
 									I am not employed by ExpensePlus, but have extensive user experience with their product. I enjoy a great working relationship with their team and strongly support the excellent work they do in helping churches and charities manage their finances.</p>
