--- a/Policies.html
+++ b/Policies.html
@@ -29,7 +29,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<a href="index.html" class="image-link"><img src="images/PD MARFLEET_Logo header header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
+					<a href="index.html" class="image-link"><img src="images/PD-Marfleet-Charity-Accounting%20and-Bookkeeping-logo-header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
 					<nav id="nav">
 						<ul>
 							<li class="special">
