--- a/Training-Support.html
+++ b/Training-Support.html
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="image-link"><img src="images/PD MARFLEET_Logo header header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
+						<a href="index.html" class="image-link"><img src="images/PD-Marfleet-Charity-Accounting%20and-Bookkeeping-logo-header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -54,7 +54,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<img src="images/training2.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="200px">
+							<img src="images/ExpensePlus-training-2.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="200px">
 							<p>Training & Support</p>
 							<p style="text-transform: lowercase;">from £65</p>
 						</header>
