--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="image-link"><img src="images/PD MARFLEET_Logo header header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
+						<a href="index.html" class="image-link"><img src="images/PD-Marfleet-Charity-Accounting%20and-Bookkeeping-logo-header.png" style="max-width: 10em; margin-top: 0.1em;"></a>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -54,7 +54,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<img src="images/EP.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="60%">
+							<img src="images/ExpensePlus-cloud-accounting-software-for-charities.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="60%">
 							<p>Outsourced Bookkeeping Package</p>
 							<p style="text-transform: lowercase;">from £545 per month </p>
 							<a href="#one" class="more scrolly">Learn More</a>
@@ -75,12 +75,12 @@
 
 	<section id="two" class="wrapper alt style2">
 		<section class="spotlight">
-			<div class="image"><img src="images/EP-flow.jpg" alt="" /></div><div class="content">
+			<div class="image"><img src="images/ExpensePlus-outsourced-bookkeeping-for-charities.jpg" alt="" /></div><div class="content">
 				<p style="text-align: center;">If you choose to go ahead, I will then create a customised weekly bookkeeping process for us. This will clearly define how I will collaborate with your team to ensure that the bookkeeping happens seamlessly in the background for you. Each week, I will check the digitally uploaded receipts, set up payments that you have approved, make adjustments as needed, and reconcile the books.</p>
 			</div>
 		</section>
 		<section class="spotlight">
-			<div class="image"><img src="images/EP-admin.jpg" alt="" /></div><div class="content">
+			<div class="image"><img src="images/ExpensePlus-charity-claiming-giftaid.jpg" alt="" /></div><div class="content">
 				<p style="text-align: center;">In addition to answering emails and queries, it is typical to schedule a monthly call to review the previous month's figures and address any questions.
 					If you claim Gift Aid on donations, I can claim it for you through ExpensePlus (or ChurchSuite, if you use that software and give me access).
 					At the end of the year, I will complete the accruals and depreciation, and help you liaise with your independent examiner to sign off on the accounts.</p>
