--- a/index.html
+++ b/index.html
@@ -96,19 +96,20 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img style="width: 60%; display: flex; margin-left: auto; margin-right: auto;" src="images/A2-Website PM headshot - BJC_Hope_Church-000097.jpg" alt="" /></div><div class="content">
+							<div class="image"><img style="width: 60%; display: flex; margin-left: auto; margin-right: auto;" src="images/A2-Website PM headshot - BJC_Hope_Church-000097.jpg" alt="" /></div>
+							<div class="content">
 								<h2>MORE ABOUT ME<br /></h2>
 								<p style="text-align: center;">I have worked in the charity sector as a finance officer for almost a decade, gaining extensive experience in fund accounting along the way. I have also served on a leadership team of a church for over 8 years, so I understand the unique challenges of managing medium sized charity accounts, often with only a small or volunteer team. With that experience, I am now committed to helping other charities efficiently manage their finances in a cost effective way. Whether you need outsourced bookkeeping*, want to streamline your accounting systems, or require training for your finance teams, I can help. Let me assist in taking care of your finances efficiently and accurately, so your team can focus on delivering the primary aims of your charity.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<section id="ExpensePlus">
-							<div class="image"><img src="images/ExpensePlus-cloud-accounting-software-for-charities.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/ExpensePlus-cloud-accounting-software-for-charities.jpg" alt="" /></div>
+							<div class="content">
 								<h2>EXPENSEPLUS<br /></h2>
 								<p style="text-align: center;">I’m an ExpensePlus verified bookkeeper and consultant. No matter how big or small your charity may be, <a href="https://expenseplus.co.uk/">ExpensePlus'</a> easy-to-use, cloud-based, fund accounting software will save you time and money. All my services require your organisation to either be using ExpensePlus already, or be willing to migrate to that system (which I can help you with). 
 									I am not employed by ExpensePlus, but have extensive user experience with their product. I enjoy a great working relationship with their team and strongly support the excellent work they do in helping churches and charities manage their finances.</p>
-									
-							</div>
+								</div>
 							</section>
 						</section>
 					</section>
