--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 							</div>
 						</section>
 					</section>
+					<!-- ExpensePlus -->
 					<section id="ExpensePlus" class="wrapper alt style2"></section>
 						<section class="spotlight">
 							
