--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					<!-- ExpensePlus -->
 					<section id="ExpensePlus" class="wrapper alt style2"></section>
 						<section class="spotlight">
-							<div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/zbLkB6dutWg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+							<div class="video"><iframe class="YT-video" src="https://www.youtube.com/embed/zbLkB6dutWg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 							<div class="content">
 								<h2>EXPENSEPLUS<br /></h2>
 								<p style="text-align: center;">I’m an ExpensePlus verified bookkeeper and consultant. No matter how big or small your charity may be, <a href="https://expenseplus.co.uk/">ExpensePlus'</a> easy-to-use, cloud-based, fund accounting software will save you time and money. All my services require your organisation to either be using ExpensePlus already, or be willing to migrate to that system (which I can help you with). 
