--- a/Training-Support.html
+++ b/Training-Support.html
@@ -109,6 +109,7 @@
 								</li>
 								<li>
 									<header class="package">
+									<section id="Migration"></section>
 									<h3>Migration Support Package</h3>
 									</header>
 									<p>from £750</p>
