--- a/Training-Support.html
+++ b/Training-Support.html
@@ -108,8 +108,8 @@
 									</div>
 								</li>
 								<li>
+									<section id="migration"></section>
 									<header class="package">
-									<section id="Migration"></section>
 									<h3>Migration Support Package</h3>
 									</header>
 									<p>from £750</p>
