--- a/Training-Support.html
+++ b/Training-Support.html
@@ -107,8 +107,9 @@
 										</div>
 									</div>
 								</li>
+								<section id="migration"></section>
 								<li>
-									<section id="migration"></section>
+							
 									<header class="package">
 									<h3>Migration Support Package</h3>
 									</header>
@@ -135,6 +136,7 @@
 										</div>
 									</div>							
 								</li>
+							</section>
 							</ul>
 						</div>
 							<div class="center-button">
