--- a/Training-Support.html
+++ b/Training-Support.html
@@ -107,8 +107,7 @@
 										</div>
 									</div>
 								</li>
-								<section id="migration"></section>
-								<li>
+								<a id="migration"></a>
 							
 									<header class="package">
 									<h3>Migration Support Package</h3>
@@ -136,7 +135,6 @@
 										</div>
 									</div>							
 								</li>
-							</section>
 							</ul>
 						</div>
 							<div class="center-button">
