--- a/Training-Support.html
+++ b/Training-Support.html
@@ -109,6 +109,7 @@
 								</li>
 								<li>
 									<a id="migration"></a>
+									<div id=”migration” style=”margin-top: -200px; margin-bottom: 200px;”></div>
 									<header class="package">
 									<h3>Migration Support Package</h3>
 									</header>
