--- a/Training-Support.html
+++ b/Training-Support.html
@@ -109,7 +109,7 @@
 								</li>
 								<li>
 									<a id="migration"></a>
-									<div id=”migration” style=”margin-top: -400px; margin-bottom: 400px;”></div>
+									<div id=”migration” style="margin-top:-400px; margin-bottom: 400px"></div>
 									<header class="package">
 									<h3>Migration Support Package</h3>
 									</header>
