--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 						</section>
 					</section>
 					<!-- ExpensePlus -->
-					<section id="ExpensePlus" class="wrapper alt style2"></section>
+					<section id="ExpensePlus" style="margin-top:-200px; margin-bottom: 200px" class="wrapper alt style2"></section>
 						<section class="spotlight">
 							<div class="video"><iframe class="YT-video" src="https://www.youtube.com/embed/zbLkB6dutWg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 							<div class="content">
