--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -55,7 +55,7 @@
 					<article id="main">
 						<header>
 							<img src="images/ExpensePlus-cloud-accounting-software-for-charities.jpg" style="border-radius: 1em; margin-bottom: 20px;" width="60%">
-							<p>Outsourced Bookkeeping Package</p>
+							<p>Outsourced Bookkeeping</p>
 							<p style="text-transform: lowercase;">from £545 per month </p>
 							<a href="#one" class="more scrolly">Learn More</a>
 
