--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -66,7 +66,7 @@
 					<div class="inner">
 						<header class="major">
 							<h2 style="color: #228ea6;">What's included?</h2>
-								<p>If you already use <a href="https://pdmarfleet.co.uk/#ExpensePlus">ExpensePlus</a> and thinking about outsourcing your bookkeeping, then we'll start with a free, no-obligation, 30-minute consultation via Zoom. This will enable me to learn more about you, your organisation, and your current ExpensePlus account setup in greater depth. As each organisation's bookkeeping is unique, the fees I charge may vary upwards from a base price of £545 per month. However, if I assess your accounts to be very simple or if you are a very small organisation, I may be able to offer a lower price to accommodate your needs. At the end of this session, I will confirm the package price for you.</p>
+								<p>If you already use <a href="https://pdmarfleet.co.uk/#ExpensePlus">ExpensePlus</a> and are thinking about outsourcing your bookkeeping, then we'll start with a free, no-obligation, 30-minute consultation via Zoom. This will enable me to learn more about you, your organisation, and your current ExpensePlus account setup in greater depth. As each organisation's bookkeeping is unique, the fees I charge may vary upwards from a base price of £545 per month. However, if I assess your accounts to be very simple or if you are a very small organisation, I may be able to offer a lower price to accommodate your needs. At the end of this session, I will confirm the package price for you.</p>
 								
 						</header>		
 					</div>
