--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -82,7 +82,7 @@
 		<section class="spotlight">
 			<div class="image"><img src="images/ExpensePlus-charity-claiming-giftaid.jpg" alt="" /></div><div class="content">
 				<p style="text-align: center;">In addition to answering emails and queries, it is typical to schedule a monthly call to review the previous month's figures and address any questions.
-					If you claim Gift Aid on donations, I can claim it for you through ExpensePlus (or ChurchSuite, if you use that software and give me access).
+					If you claim Gift Aid on donations, I can prepare you claim you using ExpensePlus.
 					At the end of the year, I will complete the accruals and depreciation, and help you liaise with your independent examiner to sign off on the accounts.</p>
 			</div>
 		</section>
@@ -102,7 +102,7 @@
 											<a class="close" href="#three">&times;</a>
 											<div class="content">
 									<p>By choosing to outsource your bookkeeping to me using ExpensePlus, you can save your church or charity both time and money.
-										ExpensePlus is a cloud-based accounting system, which enables efficient and streamlined remote collaboration between your team and me on a weekly basis.
+										<a href="https://pdmarfleet.co.uk/#ExpensePlus">ExpensePlus is a cloud-based accounting system</a>, which enables efficient and streamlined remote collaboration between your team and me on a weekly basis.
 										As an ExpensePlus verified bookkeeper, I have the necessary skills and experience to ensure that your church or charity's finances are accurately managed and recorded.  Your team can then focus on your charity's core mission while leaving the financial day-to-day management to me.</p>
 									<div class="center-button">
 										<a href="contact.html" class="button fit primary">Enquire</a>
@@ -118,7 +118,7 @@
 											<h2>What if we don’t use ExpensePlus, can you do our bookkeeping still?</h2>
 											<a class="close" href="#three">&times;</a>
 											<div class="content">
-									<p>My services are only available to charities and churches using ExpensePlus. However, if your organisation is not yet using ExpensePlus, <a href="Training-Support.html">I can assist in migrating your accounting system</a> to the platform before taking on your bookkeeping for you.</p>
+									<p>My services are only available to charities and non-profit organisations using ExpensePlus. However, if your organisation is not yet using ExpensePlus, <a href="Training-Support.html">I can assist in migrating your accounting system</a> to the platform before taking on your bookkeeping for you.</p>
 									<div class="center-button" >
 										<a href="contact.html" class="button fit primary" style="margin-bottom: 2em;">Enquire</a>
 										</div>
