--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -82,7 +82,7 @@
 		<section class="spotlight">
 			<div class="image"><img src="images/ExpensePlus-charity-claiming-giftaid.jpg" alt="" /></div><div class="content">
 				<p style="text-align: center;">In addition to answering emails and queries, it is typical to schedule a monthly call to review the previous month's figures and address any questions.
-					If you claim Gift Aid on donations, I can prepare you claim you using ExpensePlus.
+					If you claim Gift Aid on donations, I can prepare your claim for you using ExpensePlus.
 					At the end of the year, I will complete the accruals and depreciation, and help you liaise with your independent examiner to sign off on the accounts.</p>
 			</div>
 		</section>
