--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/ExpensePlus-Bookkeeping-package.jpg" alt="" /></div><div class="content">
 								<h2>OUTSOURCED BOOKKEEPING<br /></h2>
-								<p style="text-align: center;">Save your organisation time and money by outsourcing your bookkeeping to me via the ExpensePlus cloud accounting software.</p>
+								<p style="text-align: center;">Save your organisation time and money by outsourcing your bookkeeping to me via the <a href="#expenseplus">ExpensePlus cloud accounting software</a>.</p>
 								<div class="center-button">
 									<a href="bookkeeping.html" class="button fit">Find Out More</a>
 								</div>
