--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 							<div class="video"><iframe class="YT-video" src="https://www.youtube.com/embed/zbLkB6dutWg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 							<div class="content">
 								<h2>EXPENSEPLUS<br /></h2>
-								<p style="text-align: center;">I’m an ExpensePlus verified bookkeeper and consultant. No matter how big or small your charity may be, ExpensePlus' easy-to-use, cloud-based, fund accounting software will save you time and money. All my services require your organisation to either be using ExpensePlus already, or be willing to migrate to that system (<a href="https://pdmarfleet.co.uk/training-support/#migration">which I can help you with</a>). 
+								<p style="text-align: center;">No matter how big or small your charity may be, ExpensePlus' easy-to-use, cloud-based, fund accounting software will save you time and money. I’m an ExpensePlus verified bookkeeper and consultant. All my services require your organisation to either be using ExpensePlus already, or be willing to migrate to that system (<a href="https://pdmarfleet.co.uk/training-support/#migration">which I can help you with</a>). 
 									I am not employed by ExpensePlus, but have extensive user experience with their product. I enjoy a great working relationship with their team and strongly support <a href="https://expenseplus.co.uk/">the excellent work they do</a> in helping churches and charities manage their finances.</p>
 								</div>
 						</section>
