--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/ExpensePlus-training-support.png" alt="" /></div><div class="content">
 								<h2>SUPPORT AND TRAINING<br /></h2>
-								<p style="text-align: center;">Get bespoke setup & support for your team when moving to ExpensePlus cloud accounting system.</p>
+								<p style="text-align: center;">Receive custom setup and support for your team when transitioning to the ExpensePlus cloud accounting system.</p>
 								<div class="center-button">
 									<a href="training-support.html" class="button fit">Find Out More</a>
 								</div>
