--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -148,10 +148,25 @@
 											<h2>Do you provide payroll as part of this package?</h2>
 											<a class="close" href="#three">&times;</a>
 											<div class="content">
-									<p>If you need a payroll provider, I can provide that through a third party payroll company that I work with. Please ask for details at your initial consultation with me.</p>
-									<div class="center-button" >
-										<a href="contact.html" class="button fit primary" style="margin-bottom: 2em;">Enquire</a></br>
+												<p>If you need a payroll provider, I can provide that through a third party payroll company that I work with. Please ask for details at your initial consultation with me.</p>
+												<div class="center-button" >
+													<a href="contact.html" class="button fit primary" style="margin-bottom: 2em;">Enquire</a></br>
+												</div>
+											</div>
 										</div>
+									</div>
+									<div class="flex-parent jc-center">	
+										<a class="button" href="#popup5">Do we have to be a charity?</a>
+									</div>							
+									<div id="popup5" class="overlay">
+										<div class="popup">
+											<h2>Do we have to be a charity to hire you?</h2>
+											<a class="close" href="#three">&times;</a>
+											<div class="content">
+												<p>No. ExpensePlus is designed for charities, but it is also an excellent option for any non-profit organisation and is used by churches, charities, community groups and sports clubs. It is not intended to be used by businesses and, therefore, I do not offer bookkeeping services for profit-making businesses.</p>
+												<div class="center-button" >
+													<a href="contact.html" class="button fit primary" style="margin-bottom: 2em;">Enquire</a></br>
+												</div>
 											</div>
 										</div>
 									</div>
