--- a/Training-Support.html
+++ b/Training-Support.html
@@ -63,7 +63,7 @@
 				<section id="one" class="wrapper style1 special">
 					<div class="inner">
 						<header class="major">
-								<p><a href="https://pdmarfleet.co.uk/#ExpensePlus">ExpensePlus</a> provides excellent free training and support through their website, which is sufficient for many users. However, sometimes additional support from me is helpful if:</p>
+								<p><a href="https://pdmarfleet.co.uk/#ExpensePlus">ExpensePlus</a> cloud accounting software provides excellent free training and support through their website, which is sufficient for many users. However, sometimes additional support from me is helpful if:</p>
 							<div sytle="max-width:60%;">
 								<li>You would benefit from bespoke training.</li>
 								<li>Managing charity accounts is new to you and you would like additional help getting started.</li>
