--- a/Training-Support.html
+++ b/Training-Support.html
@@ -127,7 +127,7 @@
 									<p>Each organisation's migration to ExpensePlus is unique, so the fees I charge may vary from the basic package price of £750. This is particularly true if your accounts require significantly more work than usual before they can be transferred to ExpensePlus. However, if I think your accounts are simple to migrate or you are a very small organisation, I may be able to offer a price lower than the base price. I will confirm the package price with you at the end of this session.</p>
 									<p>I’ll then send you a migration preparation pack to help you get all the required information ready for your switch.</p>
 									<p>When you’re ready, I’ll design and build to a new fund accounting architecture inside ExpensePlus for you. I’ll then carefully migrate all your accounts and funds over to the new system.</p>
-									<p>With the migration complete, I’ll do a 2 hour online training session with your bookkeepers to get them up and running smoothly. Alternatively, <a href="bookkeeping.html">you may decide to outsource your bookkeeping to me to at this stage</a> to free up your team - more details here.</p>
+									<p>With the migration complete, I’ll do a 2 hour online training session with your bookkeepers to get them up and running smoothly. Alternatively, <a href="bookkeeping.html">you may decide to outsource your bookkeeping to me to at this stage</a> to free up your team.</p>
 									<p>Finally, I’ll provide 1 month of priority email support for your team if they have any further questions.</p>
 									<div class="center-button">
 										<a href="contact.html" class="button fit primary">Enquire</a>
