--- a/index.html
+++ b/index.html
@@ -116,6 +116,25 @@
 								</div>
 						</section>
 					</section>
+					<!-- Reviews -->
+					<section id="three" class="wrapper style3 special">
+						<div class="inner">
+							<header class="minor">
+								<h2>What others say</h2>
+								<p sytle="font-size:10px"><a href="https://goo.gl/maps/AV6ehAY52am5TFgz8">on Goggle Reviews</a></p>
+							</header>
+							<ul class="features">
+								<li>
+									<img style="max-width: 30%!important;border-radius: 100px;" src="/Users/petermarfleet/PD Marfleet Accounting/Company - Documents/main-website/images/pymans-44.jpg">
+									<p style="font-style: italic;padding-top: 25px;">"We have been delighted at the work Pete has done for us. He made the move to using a new accounting system very straightforward for us and has helped us at every stage. I highly recommend PD Marfleet Accounting for all your charity accounting needs!"</p>
+									<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
+									Graham Pyman
+									<p style="font-size:12px;">Director, ChristCentral Churches</p>
+								</li>
+								
+							</ul>
+						</div>
+					</section>
 
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
