--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						</section>
 					</section>
 					<!-- Reviews -->
-					<section id="three" class="wrapper style3 special">
+					<section id="Reviews" class="wrapper style3 special">
 						<div class="inner">
 							<header class="minor">
 								<h2>What others say</h2>
