--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
 						</section>
 					</section>
 					<!-- Reviews -->
-					<section id="Reviews" class="wrapper style3 special">
+					<section id="Reviews" style="margin-top:-200px; margin-bottom: 200px"></section>
+					<section class="wrapper style3 special">
 						<div class="inner">
 							<header class="minor">
 								<h2>What others say</h2>
