--- a/index.html
+++ b/index.html
@@ -95,27 +95,28 @@
 								</div>
 							</div>
 						</section>
-						<section class="spotlight">
-
-							<div class="image"><img style="width: 60%; display: flex; margin-left: auto; margin-right: auto;" src="images/A2-Website PM headshot - BJC_Hope_Church-000097.jpg" alt="" /></div>
-							<div class="content">
-								<a id="about" style="margin-top:-200px; margin-bottom: 200px"></a>
-								<h2>MORE ABOUT ME<br /></h2>
-								<p style="text-align: center;">I have worked in the charity sector as a finance officer for almost a decade, gaining extensive experience in fund accounting along the way. I have also served on a leadership team of a church for over 8 years, so I understand the unique challenges of managing medium sized charity accounts, often with only a small or volunteer team. With that experience, I am now committed to helping other charities efficiently manage their finances in a cost effective way. Whether you need outsourced bookkeeping, want to streamline your accounting systems, or require training for your finance teams, I can help. Let me assist in taking care of your finances efficiently and accurately, so your team can focus on delivering the primary aims of your charity.</p>
-							</div>
-						</section>
-					</section>
-					<!-- ExpensePlus -->
+						<!-- ExpensePlus -->
 					<section id="ExpensePlus" style="margin-top:-200px; margin-bottom: 200px" class="wrapper alt style2"></section>
-						<section class="spotlight">
-							<div class="video"><iframe class="YT-video" src="https://www.youtube.com/embed/zbLkB6dutWg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-							<div class="content">
-								<h2>EXPENSEPLUS<br /></h2>
-								<p style="text-align: center;">Whether your charity is big or small, ExpensePlus' cloud-based fund accounting software can save you time and money. As a verified ExpensePlus bookkeeper and consultant, my services require your organisation to either already be using ExpensePlus or be willing to migrate to their system, <a href="https://pdmarfleet.co.uk/training-support/#migration">which I can help you with</a>. 
-									I am not employed by ExpensePlus, but have extensive user experience with their product. I enjoy a great working relationship with their team and strongly support <a href="https://expenseplus.co.uk/">the excellent work they do</a> in helping churches and charities manage their finances.</p>
-								</div>
-						</section>
+					<section class="spotlight">
+						<div class="video"><iframe class="YT-video" src="https://www.youtube.com/embed/zbLkB6dutWg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+						<div class="content">
+							<h2>EXPENSEPLUS<br /></h2>
+							<p style="text-align: center;">Whether your charity is big or small, ExpensePlus' cloud-based fund accounting software can save you time and money. As a verified ExpensePlus bookkeeper and consultant, my services require your organisation to either already be using ExpensePlus or be willing to migrate to their system, <a href="https://pdmarfleet.co.uk/training-support/#migration">which I can help you with</a>. 
+								I am not employed by ExpensePlus, but have extensive user experience with their product. I enjoy a great working relationship with their team and strongly support <a href="https://expenseplus.co.uk/">the excellent work they do</a> in helping churches and charities manage their finances.</p>
+							</div>
 					</section>
+				</section>	
+				<!-- About Me -->
+				<section id="AboutMe" style="margin-top:-200px; margin-bottom: 200px" class="wrapper alt style2"></section>
+					<section class="spotlight">
+					<div class="image"><img style="width: 60%; display: flex; margin-left: auto; margin-right: auto;" src="images/A2-Website PM headshot - BJC_Hope_Church-000097.jpg" alt="" /></div>
+						<div class="content">
+							<a id="about" style="margin-top:-200px; margin-bottom: 200px"></a>
+							<h2>MORE ABOUT ME<br /></h2>
+							<p style="text-align: center;">I have worked in the charity sector as a finance officer for almost a decade, gaining extensive experience in fund accounting along the way. I have also served on a leadership team of a church for over 8 years, so I understand the unique challenges of managing medium sized charity accounts, often with only a small or volunteer team. With that experience, I am now committed to helping other charities efficiently manage their finances in a cost effective way. Whether you need outsourced bookkeeping, want to streamline your accounting systems, or require training for your finance teams, I can help. Let me assist in taking care of your finances efficiently and accurately, so your team can focus on delivering the primary aims of your charity.</p>
+						</div>
+					</section>
+				</section>
 					<!-- Reviews -->
 					<section id="Reviews" style="margin-top:-200px; margin-bottom: 200px"></section>
 					<section class="wrapper style3 special">
