--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 							</header>
 							<ul class="features">
 								<li>
-									<img style="max-width: 30%!important;border-radius: 30px;" src="/images/pymans-44.jpg">
+									<img style="max-width: 30%!important;border-radius: 30px;" src="/images/ExpensePlus Review-Graham Pyman-ChristCentral-Churches.jpg">
 									<p style="font-style: italic;padding-top: 25px;">"We have been delighted at the work Pete has done for us. He made the move to using a new accounting system (ExpensePlus) very straightforward and has helped us at every stage. I highly recommend PD Marfleet Accounting for all your charity bookkeeping needs!"</p>
 									<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
 									Graham Pyman
