--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/ExpensePlus-Bookkeeping-package.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/ExpensePlus-Bookkeeping-package2.jpg" alt="" /></div><div class="content">
 								<h2>OUTSOURCED BOOKKEEPING<br /></h2>
 								<p style="text-align: center;">Save your organisation time and money by outsourcing your bookkeeping to me via the <a href="https://pdmarfleet.co.uk/#ExpensePlus">ExpensePlus</a> cloud accounting software.</p>
 								<div class="center-button">
@@ -127,7 +127,7 @@
 							</header>
 							<ul class="features">
 								<li>
-									<img style="max-width: 30%!important;border-radius: 30px;" src="/images/ExpensePlus Review-Graham Pyman-ChristCentral-Churches.jpg">
+									<img style="max-width: 30%!important;border-radius: 30px;" src="/images/ExpensePlus Review-Graham Pyman-ChristCentral-Churches.jpg.jpg">
 									<p style="font-style: italic;padding-top: 25px;">"We have been delighted at the work Pete has done for us. He made the move to using a new accounting system (ExpensePlus) very straightforward and has helped us at every stage. I highly recommend PD Marfleet Accounting for all your charity bookkeeping needs!"</p>
 									<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
 									Graham Pyman
