--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 						<div class="inner">
 							<header class="minor">
 								<h2>What others say</h2>
-								<p sytle="font-size:10px!important"><a href="https://goo.gl/maps/AV6ehAY52am5TFgz8">on Goggle Reviews</a></p>
+								<p sytle="font-size:10px!important"><a href="https://goo.gl/maps/AV6ehAY52am5TFgz8">on Google Reviews</a></p>
 							</header>
 							<ul class="features">
 								<li>
