--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -111,7 +111,7 @@
 						</div>
 					</div>
 				<div class="flex-parent jc-center">			
-					<a class="button" href="#popup2">We don’t use ExpensePlus?</a>
+					<a class="button" href="#popup2">Waht if we don't use ExpensePlus?</a>
 				</div>						
 					<div id="popup2" class="overlay">
 						<div class="popup">
