--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -91,10 +91,12 @@
 		<div class="inner">
 			
 			<ul class="features">
-				<header class="major" style="margin-bottom:0">
-					<h2>FAQs</h2>
-				</header>
-				<li><div class="flex-parent jc-center">															
+				
+				<li>
+					<header class="major" style="margin-bottom:0">
+						<h2>FAQs</h2>
+					</header>
+					<div class="flex-parent jc-center">															
 					<a class="button" href="#popup1">Why outsource bookkeeping?</a>
 				</div>								
 					<div id="popup1" class="overlay">
