--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -89,11 +89,9 @@
 	<!-- FAQs & reviews -->		
 	<section id="three" class="wrapper style3 special">
 		<div class="inner">
-			
 			<ul class="features">
-				
 				<li>
-					<header class="major" style="margin-bottom:0">
+					<header class="minor" style="margin-bottom:0">
 						<h2>FAQs</h2>
 					</header>
 					<div class="flex-parent jc-center">															
