--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -92,7 +92,7 @@
 			<ul class="features">
 				<li>
 					<header class="major" style="margin-bottom:0">
-						<h2>FAQs</h2>
+						<h2 style="padding-bottom:0em">FAQs</h2>
 					</header>
 					<div class="flex-parent jc-center">															
 					<a class="button" href="#popup1">Why outsource bookkeeping?</a>
