--- a/bookkeeping.html
+++ b/bookkeeping.html
@@ -91,7 +91,7 @@
 		<div class="inner">
 			<ul class="features">
 				<li>
-					<header class="major" style="margin-bottom:0">
+					<header class="major" style="margin-bottom:2.5em">
 						<h2 style="padding-bottom:0em">FAQs</h2>
 					</header>
 					<div class="flex-parent jc-center">															
