--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 						<div class="inner">
 							<header class="minor">
 								<h2>What others say</h2>
-								<p sytle="font-size:10px!important"><a href="https://goo.gl/maps/AV6ehAY52am5TFgz8">on Google Reviews</a></p>
+								<p sytle="font-size:10px!important"><a href="https://www.google.com/maps/place/PD+Marfleet+Accounting/@54.0680474,-1.7181923,11z/data=!4m8!3m7!1s0x85a49e458d01948b:0x8a23e834d160a476!8m2!3d47.73855!4d12.5088275!9m1!1b1!16s%2Fg%2F11ssnp2wjq?authuser=1&entry=ttu">on Google Reviews</a></p>
 							</header>
 							<ul class="features">
 								<li>
