--- a/index.html
+++ b/index.html
@@ -113,26 +113,34 @@
 						</div>
 					</section>
 				</section>
-					<!-- Reviews -->
-					<section id="Reviews" style="margin-top:-200px; margin-bottom: 200px"></section>
-					<section class="wrapper style3 special">
-						<div class="inner">
-							<header class="minor">
-								<h2>What others say</h2>
-								<p sytle="font-size:10px!important"><a href="https://www.google.com/maps/place/PD+Marfleet+Accounting/@54.0680474,-1.7181923,11z/data=!4m8!3m7!1s0x85a49e458d01948b:0x8a23e834d160a476!8m2!3d47.73855!4d12.5088275!9m1!1b1!16s%2Fg%2F11ssnp2wjq?authuser=1&entry=ttu">on Google Reviews</a></p>
-							</header>
-							<ul class="features">
-								<li>
-									<img style="max-width: 30%!important;border-radius: 30px;" src="/images/ExpensePlus Review-Graham Pyman-ChristCentral-Churches.jpg">
-									<p style="font-style: italic;padding-top: 25px;">"We have been delighted at the work Pete has done for us. He made the move to using the ExpensePlus cloud accounting software very straightforward and has helped us at every stage. I highly recommend PD Marfleet Accounting for all your charity bookkeeping needs!"</p>
-									<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
-									Graham Pyman
-									<p style="font-size:12px;">Director, ChristCentral Churches</p>
-								</li>
-								
-							</ul>
-						</div>
-					</section>
+				<section id="Reviews" style="margin-top:-200px; margin-bottom: 200px"></section>
+				<section class="wrapper style3 special">
+					<div class="inner">
+						<header class="minor">
+							<h2>What others say</h2>
+							<p sytle="font-size:10px!important"><a href="https://goo.gl/maps/AV6ehAY52am5TFgz8">on Goggle Reviews</a></p>
+						</header>
+						<ul class="features">
+							<li>
+								<img style="max-width: 30%!important;border-radius: 30px;" src="/Users/petermarfleet/PD Marfleet Accounting/Company - Documents/main-website/images/ExpensePlus Review-Graham Pyman-ChristCentral-Churches.jpg">
+								<p style="font-style: italic;padding-top: 25px;">"We have been delighted at the work Pete has done for us. He made the move to using a new accounting system (ExpensePlus) very straightforward and has helped us at every stage. I highly recommend PD Marfleet Accounting for all your charity bookkeeping needs!"</p>
+								<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
+								Graham Pyman
+								<p style="font-size:12px;">Director, ChristCentral Churches</p>
+							</li>
+							<!-- Liz Zambonini -->
+							<li>
+								<img style="max-width: 30%!important;border-radius: 30px;" src="/Users/petermarfleet/PD Marfleet Accounting/Company - Documents/main-website/images/ExpensePlus Review-liz-zambonini-hope-church-harrogate.jpg">
+								<p style="font-style: italic;padding-top: 25px;">"I would highly recommend PD Marfleet accounting. Not only is he super helpful and patient, but he is also highly skilled in Expense Plus and understands working with charities. He moved all our accounts onto Expense Plus and set everything up so that it was easy to use. He also trained us in how to use EP so that we could capture our information. He manages our monthly accounts in such a way that has saved myself and the team so much time and it makes our annual review with the accountants and auditors a breeze! Over all the years I have worked in the charity sector I have never found managing the financial side as easy as Pete has made it!"</p>
+								</br>
+								<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
+								Liz Zambonini
+								<p style="font-size:12px;">Ops Manager, Hope Church Harrogate</p>
+							</li>
+							
+						</ul>
+					</div>
+				</section>
 
 				<!-- CTA -->
 					<section id="cta" class="wrapper style4">
