--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 						</header>
 						<ul class="features">
 							<li>
-								<img style="max-width: 30%!important;border-radius: 30px;" src="/Users/petermarfleet/PD Marfleet Accounting/Company - Documents/main-website/images/ExpensePlus Review-Graham Pyman-ChristCentral-Churches.jpg">
+								<img style="max-width: 30%!important;border-radius: 30px;" src="/images/ExpensePlus Review-Graham Pyman-ChristCentral-Churches.jpg">
 								<p style="font-style: italic;padding-top: 25px;">"We have been delighted at the work Pete has done for us. He made the move to using a new accounting system (ExpensePlus) very straightforward and has helped us at every stage. I highly recommend PD Marfleet Accounting for all your charity bookkeeping needs!"</p>
 								<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
 								Graham Pyman
@@ -130,7 +130,7 @@
 							</li>
 							<!-- Liz Zambonini -->
 							<li>
-								<img style="max-width: 30%!important;border-radius: 30px;" src="/Users/petermarfleet/PD Marfleet Accounting/Company - Documents/main-website/images/ExpensePlus Review-liz-zambonini-hope-church-harrogate.jpg">
+								<img style="max-width: 30%!important;border-radius: 30px;" src="/images/ExpensePlus Review-liz-zambonini-hope-church-harrogate.jpg">
 								<p style="font-style: italic;padding-top: 25px;">"I would highly recommend PD Marfleet accounting. Not only is he super helpful and patient, but he is also highly skilled in Expense Plus and understands working with charities. He moved all our accounts onto Expense Plus and set everything up so that it was easy to use. He also trained us in how to use EP so that we could capture our information. He manages our monthly accounts in such a way that has saved myself and the team so much time and it makes our annual review with the accountants and auditors a breeze! Over all the years I have worked in the charity sector I have never found managing the financial side as easy as Pete has made it!"</p>
 								</br>
 								<p>&#11088;&#11088;&#11088;&#11088;&#11088; </p>
