--- a/Training-Support.html
+++ b/Training-Support.html
@@ -123,12 +123,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 											<h2>Migration Support Package - What’s included?</h2>
 											<a class="close" href="#">&times;</a>
 											<div class="content">
-												<p>We will start with a free, no-obligation consultation via Zoom. This will enable me to learn more about you, your organisation, and your current accounting setup in greater depth.</p> 
+												<p>We will start with a free, no-obligation consultation via Microsoft Teams. This will enable me to learn more about you, your organisation, and your current accounting setup in greater depth.</p> 
 									<p>Each organisation's migration to ExpensePlus is unique, so the fees I charge may vary from the basic package price of £750. This is particularly true if your accounts require significantly more work than usual before they can be transferred to ExpensePlus. However, if I think your accounts are simple to migrate or you are a very small organisation, I may be able to offer a price lower than the base price. I should be able to confirm the package price with you at the end of this session.</p>
-									<p>I’ll then send you a migration preparation pack to help you get all the required information ready for your switch.</p>
-									<p>When you’re ready, I’ll design and build to a new fund accounting architecture inside ExpensePlus for you. I’ll then carefully migrate all your accounts and funds over to the new system.</p>
-									<p>With the migration complete, I’ll do a 2 hour online training session with your bookkeepers to get them up and running smoothly. Alternatively, <a href="bookkeeping.html">you may decide to outsource your bookkeeping to me to at this stage</a> to free up your team.</p>
-									<p>Finally, I’ll provide 1 month of priority email support for your team if they have any further questions.</p>
+									<p>If you choose to go ahead, then this package inlcludes:</p>
+										<p>&#8226; A review of your current accounting structures and practices.</p>
+										<p>&#8226; The design of a new fund accounting architecture for use inside ExpensePlus.</p>
+										<p>&#8226; The setup of ExpensePlus including User Accounts, Opening Balances, Bank Accounts, Funds, Budget Categories, and Invoice Templates.</p>
+										<p>&#8226; I'll Oversee ‘going live’ on ExpensePlus, and will monitor and adjust the setup as necessary.</p>
+										<p>&#8226; The provision of basic ExpensePlus training for internal stakeholders (Basic Users, Finance Assistants, Budget Holders & Trustees) in the form of high quality, on-demand video training.</p>
+										<p>&#8226; With the migration complete, I’ll do a comprehensive handover with your bookkeeper during a 2-hour training package via Microsoft Teams. Alternatively, <a href="bookkeeping.html">you may decide to outsource your bookkeeping to me to at this stage</a> to free up your team.</p>
+										<p>&#8226; Finally, I’ll provide 1 month of priority email support for your team if they have any further questions.</p>
+										<p>&#8226; Of course, if you find you need adhoc support beyond this, you can easily access it via my <a href="https://pdmarfleet.co.uk/training-support#popup1">custom online training packages</a></p>
 									<div class="center-button">
 										<a href="contact.html" class="button fit primary">Enquire</a>
 										</div>
