--- a/index.html
+++ b/index.html
@@ -109,8 +109,12 @@
 						<div class="content">
 							<a id="about" style="margin-top:-200px; margin-bottom: 200px"></a>
 							<h2>MORE ABOUT ME<br /></h2>
-							<p style="text-align: center;">I have worked in the charity sector as a finance officer for almost a decade, gaining extensive experience in fund accounting along the way. I have also served on a leadership team of a church for over 8 years, so I understand the unique challenges of managing medium sized charity accounts, often with only a small or volunteer team. With that experience, <a href="https://pdmarfleet.co.uk/#Reviews">I am now committed to helping other charities</a> efficiently manage their finances in a cost effective way. Whether you need outsourced bookkeeping, want to streamline your accounting systems, or require training for your finance teams, I can help. Let me assist in taking care of your finances efficiently and accurately, so your team can focus on delivering the primary aims of your charity.</p>
-						</div>
+							<p style="text-align: center;">I have worked in the charity sector as a finance officer for almost a decade, gaining extensive experience in fund accounting and charity finance regulations as a result. I have also served on a leadership team of a church for over 8 years, so I understand the unique challenges of managing medium sized charity accounts, often with only a small or volunteer team.</p>
+
+							<p style="text-align: center;">Over the years that I’ve worked in this sector, it’s been clear that many start up third sector organisations grow to a point where they are too large to run their own finances from off an excel sheet anymore, but still way too small to be able to justify a staffed finance team with the relevant experience. For some, they find a volunteer who has both the experience and time to give to them, an ideal but increasingly rare solution.</p>
+								
+							<p style="text-align: center;">For those without that option, I'm pleased to be able to offer small to medium sized charities, a cost effective alternative to in-house finance experts.</p>
+					</div>
 					</section>
 				</section>
 				<section id="Reviews" style="margin-top:-200px; margin-bottom: 200px"></section>
