--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 							<p style="text-align: center;">Over the years that I’ve worked in this sector, it’s been clear that many charities and organisations grow to a point where they are too big to run their finances off an excel sheet anymore, but still way too small to be able to justify an experienced, in house finance team. For some, they find a volunteer who has both the experience and time to give to them, an ideal but increasingly rare solution.</p>
 								
-							<p style="text-align: center;">For those without that option, I'm pleased to be able to offer small to medium sized charities, a cost effective alternative to in-house finance experts.</p>
+							<p style="text-align: center;">For small to medium sized charities without that option, I'm pleased to be able to offer a cost effective alternative to in-house finance experts.</p>
 					</div>
 					</section>
 				</section>
