--- a/Training-Support.html
+++ b/Training-Support.html
@@ -93,13 +93,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 																
 									<div id="popup1" class="overlay">
 										<div class="popup">
-											<h2>Custom Online Training Package</h2>
+											<h2>Custom Online Training & Conusltation Package</h2>
 											<a class="close" href="#">&times;</a>
 											<div class="content">
-									<p>Below are the typical costs for this additional training and support. Please get in touch and I’ll be able to give you an idea of how much time I think we’ll need for the help you are looking for.</p>
-									<p>Up to a 2-Hour session via Zoom - £65</p>
-									<p>Half-Day Session via Zoom - £128</p>
-									<p>Full-Day Session via Zoom - £255</p>
+									<p>Below are the standard day rates for this additional training, support or consultation. Please get in touch and I’ll be able to give you an idea of how much time I think we’ll need for the help you are looking for.</p>
+									<p>​Charity income under £250k: £250-£350 per day</p>
+									<p>​Charity income over £250k: £350-£450 per day</p>
+									<p>​Charity income over £1M: £450-£550 per day</p>
+									<p>If your orgnaisiaon has an income of less than £10k, I may be able to offer support a much reduced rates. Please enquire for more details.</p>
 									<div class="center-button">
 										<a href="contact.html" class="button fit primary">Enquire</a>
 										</div>
