--- a/Training-Support.html
+++ b/Training-Support.html
@@ -86,7 +86,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									<header class="package">
 									<h3>Custom Online Training Package</h3>
 									</header>
-									<p>from £65</p>
+									<p>from £250 per day</p>
 									<p>With this option, I’ll put together a custom training package based on what questions you need answering.</p>
 									<p>For example, it could vary from a 2 hour session with me to help your bookkeeper understand the basics of managing your accounts in ExpensePlus, or 1/2 a day training online for your wider team or a full day with a mix of both. It really is up to you to say how I can help.</p>
 									<a class="button" href="#popup1">More Info</a>
