--- a/Training-Support.html
+++ b/Training-Support.html
@@ -147,7 +147,7 @@
 										</li>
 										<li>
 											<p>​For charities under £10k:</p>
-											<p>&#8226; Reduced rates may be avaialble, <a href="contact.html" class="button fit primary">let's talk</a></p>
+											<p>&#8226; Reduced rates may be avaialble, <a href="contact.html">let's talk</a></p>
 										</li>
 									
 							</ul>
